js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-import-source-assignment-expr-not-optional.js
DONOTEVALUATE
(
)
;
do
{
import
.
source
(
)
;
}
while
(
false
)
;
